frontend/src/components/chatbotStyles.css
@import url('https://fonts.googleapis.com/css2?family=ABeeZee&display=swap');


body {
  font-family: 'ABeeZee', sans-serif;

}
.react-chatbot-kit-chat-container {
    width: 430px !important;
    max-width: 500px !important;
    position: relative !important;
    height: 100%;
    padding-top:100px
  }

  .react-chatbot-kit-chat-bot-message{
    width: 290px !important;
    margin-left: 10px !important;
    border-radius: 10px;
    color: black;
    /* border: 1px solid #9BA9B0; */
    /* border-radius: 40.6px 40px 40px 40px; */
  }

 .chatbot {
    background-color: #D1D5DB;
    width: 100vw;
    height: 100vh;
  }



  .chat-bubble  {
    background-color: rgb(226, 239, 255);
    color: black ;
  }

 
  .chat-option:hover {
    background: #8DCAB6;
  }

  .chat-option {
    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
  }
  
  .react-chatbot-kit-user-chat-message{
    background-color: white;
    border-radius: 20px;
    margin-bottom: 15px;
    margin-right: 8px;
  }
  .react-chatbot-kit-user-chat-message-arrow {
    background-color: white;
    border-top: 8px solid #F3F4F6;
    border-bottom: 8px solid #F3F4F6;
    border-left: 8px solid white;
  }
  .react-chatbot-kit-chat-header{
    padding: 16px ;
    /* background: black; */
    color: white;
    font-size: 13px;
    font-family: 'ABeeZee', sans-serif;
    border-radius: 10px 10px 0px 0px;
  }

  .react-chatbot-kit-chat-container {
    height: 80vh;
    max-height: 80vh !important;  
    margin: auto;
  }

  .chatbot-container{
    height: auto;
  }

  .react-chatbot-kit-chat-inner-container {
    height: 627px;
  }

  .react-chatbot-kit-chat-message-container {
    height: 580px;
    padding-bottom: 60px !important; /* Make space for the home button */
    background-color: #F3F4F6;
  }

  .react-chatbot-kit-chat-input-form {
    display: none;
  }

  .react-chatbot-kit-user-avatar-container{
     margin-top: 15px;
  }


 .css-1nmdiq5-menu {
    color:  black;
 }


 .css-b62m3t-container {
  color: black;
 }


  
 

